重构架构，以proto为统一出口，在结构中增加参数校验
