# api/gen/api/proto/common.pb.go
@@ -1,0 +1,131 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.36.11
+// 	protoc        v7.34.0--rc2
+// source: api/proto/common.proto
+
+package apipb
+
+import (
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+	sync "sync"
+	unsafe "unsafe"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type OperationReply struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Code          int32                  `protobuf:"varint,1,opt,name=code,proto3" json:"code,omitempty"`
+	Message       string                 `protobuf:"bytes,2,opt,name=message,proto3" json:"message,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *OperationReply) Reset() {
+	*x = OperationReply{}
+	mi := &file_api_proto_common_proto_msgTypes[0]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *OperationReply) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*OperationReply) ProtoMessage() {}
+
+func (x *OperationReply) ProtoReflect() protoreflect.Message {
+	mi := &file_api_proto_common_proto_msgTypes[0]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use OperationReply.ProtoReflect.Descriptor instead.
+func (*OperationReply) Descriptor() ([]byte, []int) {
+	return file_api_proto_common_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *OperationReply) GetCode() int32 {
+	if x != nil {
+		return x.Code
+	}
+	return 0
+}
+
+func (x *OperationReply) GetMessage() string {
+	if x != nil {
+		return x.Message
+	}
+	return ""
+}
+
+var File_api_proto_common_proto protoreflect.FileDescriptor
+
+const file_api_proto_common_proto_rawDesc = "" +
+	"\n" +
+	"\x16api/proto/common.proto\x12\x03api\">\n" +
+	"\x0eOperationReply\x12\x12\n" +
+	"\x04code\x18\x01 \x01(\x05R\x04code\x12\x18\n" +
+	"\amessage\x18\x02 \x01(\tR\amessageB#Z!auth_info/api/gen/api/proto;apipbb\x06proto3"
+
+var (
+	file_api_proto_common_proto_rawDescOnce sync.Once
+	file_api_proto_common_proto_rawDescData []byte
+)
+
+func file_api_proto_common_proto_rawDescGZIP() []byte {
+	file_api_proto_common_proto_rawDescOnce.Do(func() {
+		file_api_proto_common_proto_rawDescData = protoimpl.X.CompressGZIP(unsafe.Slice(unsafe.StringData(file_api_proto_common_proto_rawDesc), len(file_api_proto_common_proto_rawDesc)))
+	})
+	return file_api_proto_common_proto_rawDescData
+}
+
+var file_api_proto_common_proto_msgTypes = make([]protoimpl.MessageInfo, 1)
+var file_api_proto_common_proto_goTypes = []any{
+	(*OperationReply)(nil), // 0: api.OperationReply
+}
+var file_api_proto_common_proto_depIdxs = []int32{
+	0, // [0:0] is the sub-list for method output_type
+	0, // [0:0] is the sub-list for method input_type
+	0, // [0:0] is the sub-list for extension type_name
+	0, // [0:0] is the sub-list for extension extendee
+	0, // [0:0] is the sub-list for field type_name
+}
+
+func init() { file_api_proto_common_proto_init() }
+func file_api_proto_common_proto_init() {
+	if File_api_proto_common_proto != nil {
+		return
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: unsafe.Slice(unsafe.StringData(file_api_proto_common_proto_rawDesc), len(file_api_proto_common_proto_rawDesc)),
+			NumEnums:      0,
+			NumMessages:   1,
+			NumExtensions: 0,
+			NumServices:   0,
+		},
+		GoTypes:           file_api_proto_common_proto_goTypes,
+		DependencyIndexes: file_api_proto_common_proto_depIdxs,
+		MessageInfos:      file_api_proto_common_proto_msgTypes,
+	}.Build()
+	File_api_proto_common_proto = out.File
+	file_api_proto_common_proto_goTypes = nil
+	file_api_proto_common_proto_depIdxs = nil
+}
