# api/gen/api/proto/document.pb.go
@@ -1,0 +1,191 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.36.11
+// 	protoc        v7.34.0--rc2
+// source: api/proto/document.proto
+
+package apipb
+
+import (
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	structpb "google.golang.org/protobuf/types/known/structpb"
+	reflect "reflect"
+	sync "sync"
+	unsafe "unsafe"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type GeneratePDFRequest struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	TemplateName  string                 `protobuf:"bytes,1,opt,name=template_name,json=templateName,proto3" json:"template_name,omitempty"`
+	Data          *structpb.Struct       `protobuf:"bytes,2,opt,name=data,proto3" json:"data,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *GeneratePDFRequest) Reset() {
+	*x = GeneratePDFRequest{}
+	mi := &file_api_proto_document_proto_msgTypes[0]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *GeneratePDFRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GeneratePDFRequest) ProtoMessage() {}
+
+func (x *GeneratePDFRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_api_proto_document_proto_msgTypes[0]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GeneratePDFRequest.ProtoReflect.Descriptor instead.
+func (*GeneratePDFRequest) Descriptor() ([]byte, []int) {
+	return file_api_proto_document_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *GeneratePDFRequest) GetTemplateName() string {
+	if x != nil {
+		return x.TemplateName
+	}
+	return ""
+}
+
+func (x *GeneratePDFRequest) GetData() *structpb.Struct {
+	if x != nil {
+		return x.Data
+	}
+	return nil
+}
+
+type GenerateWordRequest struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	TemplateName  string                 `protobuf:"bytes,1,opt,name=template_name,json=templateName,proto3" json:"template_name,omitempty"`
+	Data          *structpb.Struct       `protobuf:"bytes,2,opt,name=data,proto3" json:"data,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *GenerateWordRequest) Reset() {
+	*x = GenerateWordRequest{}
+	mi := &file_api_proto_document_proto_msgTypes[1]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *GenerateWordRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GenerateWordRequest) ProtoMessage() {}
+
+func (x *GenerateWordRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_api_proto_document_proto_msgTypes[1]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GenerateWordRequest.ProtoReflect.Descriptor instead.
+func (*GenerateWordRequest) Descriptor() ([]byte, []int) {
+	return file_api_proto_document_proto_rawDescGZIP(), []int{1}
+}
+
+func (x *GenerateWordRequest) GetTemplateName() string {
+	if x != nil {
+		return x.TemplateName
+	}
+	return ""
+}
+
+func (x *GenerateWordRequest) GetData() *structpb.Struct {
+	if x != nil {
+		return x.Data
+	}
+	return nil
+}
+
+var File_api_proto_document_proto protoreflect.FileDescriptor
+
+const file_api_proto_document_proto_rawDesc = "" +
+	"\n" +
+	"\x18api/proto/document.proto\x12\x03api\x1a\x1cgoogle/protobuf/struct.proto\"f\n" +
+	"\x12GeneratePDFRequest\x12#\n" +
+	"\rtemplate_name\x18\x01 \x01(\tR\ftemplateName\x12+\n" +
+	"\x04data\x18\x02 \x01(\v2\x17.google.protobuf.StructR\x04data\"g\n" +
+	"\x13GenerateWordRequest\x12#\n" +
+	"\rtemplate_name\x18\x01 \x01(\tR\ftemplateName\x12+\n" +
+	"\x04data\x18\x02 \x01(\v2\x17.google.protobuf.StructR\x04dataB#Z!auth_info/api/gen/api/proto;apipbb\x06proto3"
+
+var (
+	file_api_proto_document_proto_rawDescOnce sync.Once
+	file_api_proto_document_proto_rawDescData []byte
+)
+
+func file_api_proto_document_proto_rawDescGZIP() []byte {
+	file_api_proto_document_proto_rawDescOnce.Do(func() {
+		file_api_proto_document_proto_rawDescData = protoimpl.X.CompressGZIP(unsafe.Slice(unsafe.StringData(file_api_proto_document_proto_rawDesc), len(file_api_proto_document_proto_rawDesc)))
+	})
+	return file_api_proto_document_proto_rawDescData
+}
+
+var file_api_proto_document_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
+var file_api_proto_document_proto_goTypes = []any{
+	(*GeneratePDFRequest)(nil),  // 0: api.GeneratePDFRequest
+	(*GenerateWordRequest)(nil), // 1: api.GenerateWordRequest
+	(*structpb.Struct)(nil),     // 2: google.protobuf.Struct
+}
+var file_api_proto_document_proto_depIdxs = []int32{
+	2, // 0: api.GeneratePDFRequest.data:type_name -> google.protobuf.Struct
+	2, // 1: api.GenerateWordRequest.data:type_name -> google.protobuf.Struct
+	2, // [2:2] is the sub-list for method output_type
+	2, // [2:2] is the sub-list for method input_type
+	2, // [2:2] is the sub-list for extension type_name
+	2, // [2:2] is the sub-list for extension extendee
+	0, // [0:2] is the sub-list for field type_name
+}
+
+func init() { file_api_proto_document_proto_init() }
+func file_api_proto_document_proto_init() {
+	if File_api_proto_document_proto != nil {
+		return
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: unsafe.Slice(unsafe.StringData(file_api_proto_document_proto_rawDesc), len(file_api_proto_document_proto_rawDesc)),
+			NumEnums:      0,
+			NumMessages:   2,
+			NumExtensions: 0,
+			NumServices:   0,
+		},
+		GoTypes:           file_api_proto_document_proto_goTypes,
+		DependencyIndexes: file_api_proto_document_proto_depIdxs,
+		MessageInfos:      file_api_proto_document_proto_msgTypes,
+	}.Build()
+	File_api_proto_document_proto = out.File
+	file_api_proto_document_proto_goTypes = nil
+	file_api_proto_document_proto_depIdxs = nil
+}
