# internal/handler/hello.go
@@ -1,10 +1,12 @@
-package handler
+﻿package handler
 
 import (
 	"net/http"
+	"strings"
 
 	"github.com/gin-gonic/gin"
 
+	apipb "auth_info/api/gen/api/proto"
 	bizhello "auth_info/internal/biz/hello"
 )
 
@@ -25,18 +27,19 @@ func NewHelloHandler(uc *bizhello.UseCase) *HelloHandler {
 // @Accept json
 // @Produce json
 // @Param name query string false "名字"
-// @Success 200 {object} map[string]interface{}
+// @Success 200 {object} apipb.HelloReply
+// @Failure 401 {object} apipb.OperationReply
 // @Security BearerAuth
 // @Router /hello [get]
 func (h *HelloHandler) Hello(c *gin.Context) {
-	name := c.Query("name")
-	msg := h.uc.SayHello(name)
+	req := apipb.HelloRequest{Name: strings.TrimSpace(c.Query("name"))}
+	msg := h.uc.SayHello(req.GetName())
 
-	c.JSON(http.StatusOK, gin.H{
-		"code":    http.StatusOK,
-		"message": "success",
-		"data": gin.H{
-			"message": msg,
+	c.JSON(http.StatusOK, &apipb.HelloReply{
+		Code:    http.StatusOK,
+		Message: "success",
+		Data: &apipb.HelloData{
+			Message: msg,
 		},
 	})
 }
